mobile fix
fixed elements not showing properly on mobile size

--- a/src/app/styles/catalog/_product-tile.scss
+++ b/src/app/styles/catalog/_product-tile.scss
@@ -19,23 +19,37 @@
     img {
       width: 100%;
       position: relative;
+      max-width: 148px;
+      @include media-breakpoint-up(320px) {
+        max-width: none;
+      }
     }
   }
 
   .product-fav {
     position: absolute;
-    right: 10px;
+    right: 0;
     top: 0;
-    padding: 20px;
+    margin: 10px; // extra space for sausage fingers
 
     i[class*='fa-'] {
-      font-size: 40px;
+      font-size: x-large;
+
+      @include media-breakpoint-up(sm) {
+        font-size: 40px;
+      }
     }
   }
 
   &-title {
     text-transform: uppercase;
     margin-top: 24px;
+    font-weight: 500;
+    font-size: 16px;
+
+    @include media-breakpoint-up(lg) {
+      font-size: inherit;
+    }
   }
 
   .product-price {
