--- a/src/app/styles/common/_footer.scss
+++ b/src/app/styles/common/_footer.scss
@@ -3,7 +3,7 @@
 
   @include media-breakpoint-up(lg) {
     font-size: 22px;
-    padding: 40px 0;
+    padding: 40px 12px;
   }
 
   &-inner {
